--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 
     <properties>
         <kotlin.version>1.3.50</kotlin.version>
+        <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
     </properties>
 
 
@@ -92,7 +93,7 @@
                         </goals>
                         <configuration>
                             <sourceDirs>
-                                <source>src/test/java</source>
+                                <source>src/kotlinTest/kotlin</source>
                                 <source>src/test/kotlin</source>
                             </sourceDirs>
                         </configuration>
